[project]
name = "redirect-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115.8", "modal>=0.73.43"]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.9.6"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true

[tool.pyright]
reportUnknownMemberType = false
